# vlr-analytics

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  workflow.md
airflow/: .env.example  .gitignore  README.md  airflow.db-shm  airflow.db-wal  main.py  pyproject.toml  report.py  start.sh
airflow/dags/: bby_me.py  simple.py  something.py  test.py  vct_stats_pipeline.py  vlr_stats_scraper_completion.py  vlr_stats_scraper_dispatcher.py  vlr_stats_scrapper_bronze_layer.py
functions/scrapper/: Dockerfile  main.py
functions/vlr-silver-transform/: .env.example  .gitignore  README.md  build.sh  main.py  pyproject.toml  seed.sh
functions/vlr-stats-scrapper/: .env.example  README.md  build.sh  main.py  requirements.txt
functions/vlr-stats-scrapper-batch/: .env.example  .env.prod.example  .gitignore  Dockerfile  pyproject.toml
functions/vlr-stats-scrapper-batch/scrapers/: scraper.py  stats.py
functions/vlr-stats-scrapper-batch/scripts/: RUN.yaml  create_secrets.sh
functions/vlr-stats-scrapper-batch/utils/: constants.py  db.py  helpers.py  html_parsers.py  vct_logging.py
notebooks/: eda.ipynb
scrapers/: __init__.py  events.py  matches.py  scraper.py  stats.py
scrapers_async/: __init__.py  scraper.py  stats.py
scraping/: all_vct_event_details.ipynb  vct_event.ipynb
terraform/: .gitignore  README.md  bootstrap.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/00-bootstrap/: backend.tf  main.tf  (+1 more)
utils/: config.py  constants.py  db.py  gcp.py  helpers.py  html_parsers.py  logging.py  utils.py  vct_logging.py
(+45 files in other folders)
